2007-05-31  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.h:
	* src/yelp-utils.c:
	Beginning (empty) of new utils resolver (masked by DON_UTILS define)
	
	* src/test-resolver.c: 
	* src/Makefile.am:
	Beginnings of resolver test
	
	
2007-04-30  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc.c: 
	Add in man pages
	Do an interesting use of the new stuff to 
	run 3 transforms - main, info and man so
	we quickly get the main page, then get man and info when ready

	* src/yelp-document.h:
	* src/yelp-document.c:
	Add yelp_document_has_page that's used
	in yelp-toc
	
2007-04-26  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc.c:
	Add info page support
	
	* stylesheets/toc2html.xsl: 
	* src/test-document.c:
	* src/yelp-toc.c:
	Make TOC work properly with new document structure	

	* src/yelp-page.c:
	* src/yelp-docbook.c:
	Various misc. changes to make docbook work properly
	Add TODO's

2007-04-24  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc.c:
	* src/yelp-toc.h:
	* src/yelp-db-pager.c:
	* src/test-document.c:
	* src/Makefile.am:
	Initial commit of new yelp-toc (broken)
	Add toc option to test-document (broken)


2007-04-22  Shaun McCance  <shaunm@gnome.org>

	* ChangeLog
	* src/Makefile.am:
	* src/test-man-parser.c:
	* src/yelp-debug.h:
	* src/yelp-error.c:
	* src/yelp-error.h:
	* src/yelp-io-channel.c:
	* src/yelp-man-parser.c:
	* src/yelp-man-parser.h:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	- Merging yelp-document into yelp-spoon

2007-04-14  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c: 
	Convert info TOC to use new spoon work
	(slightly later) Convert man TOC to use new spoon work as well

2007-03-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/toc2html.xsl: 
	* src/yelp-toc-pager.c:
	First pass at spoon integration
	TOC correctly displayed, replacing all sk code
	with spoon_for_each_in_category()

	* src/yelp-toc-pager.c:
	* configure.in:
	First work on Spoon integration